--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -9,8 +9,8 @@
             <hr class="my-4"> -->
             <!-- summary section -->
             <div>
-              <h4 class="text-center">Summary</h4>
-               <p class="lead">Full stack web developer with experience with Ruby/Ruby on Rails.
+              <h2 class="text-center">Summary</h2>
+               <p class="lead">Fullstack web developer with experience with Ruby/Ruby on Rails.
                   Previous roles in software sales and account management help me understand
                   the importance of writing clean code that translates into an excellent
                   customer experience. Transitioned to coding to help companies create
@@ -42,27 +42,28 @@
          </div>
 
        </div>
+       <br>
 
          <!-- education  section -->
          <div>
-            <hr class="my-4">
+            <hr class="my-4"><br>
             <h2 class="text-center">Education</h2>
             <div class="row experience-title">
                <div class="col-md-6">
-                  <h3>Flatiron School</h3>
+                  <h4>Flatiron School</h4>
                </div>
                <div class="col-md-6">
                   <h5 class="date">November 2018 - Present</h5>
                </div>
-            </div>
+            </div><br>
             <div class="row experience-summary">
                <div class="col-md-12">
                   <p>Top rated full-stack web development program; nine months and 1000 hour curriculum covering Ruby, JavaScript, React/Redux, SQL, Git, and HTML/CSS</p>
                </div>
-            </div>
+            </div><br>
             <div class="row experience-title">
                <div class="col-md-6">
-                  <h3>SUNY Purchase</h3>
+                  <h4>SUNY Purchase</h4>
                </div>
                <div class="col-md-6">
                   <h5 class="date">2004-2006</h5>
@@ -72,10 +73,10 @@
                <div class="col-md-12">
                   <p>Coursework completed towards a Bachelor of Arts degree in Economics</p>
                </div>
-            </div>
+            </div><br>
             <div class="row experience-title">
                <div class="col-md-6">
-                  <h3>Occidental College</h3>
+                  <h4>Occidental College</h4>
                </div>
                <div class="col-md-6">
                   <h5 class="date">2002-2004</h5>
@@ -85,15 +86,15 @@
                <div class="col-md-12">
                   <p>Coursework completed towards a Bachelor of Arts degree in Economics</p>
                </div>
-            </div>
+            </div><br>
             <!-- work experience section -->
-            <hr class="my-4">
+            <hr class="my-4"><br>
             <div>
                <h2 class="text-center">Work Experience</h2>
                <div class="row experience-title">
                  <div class="col-md-6">
-                     <h3>Greystar</h3>
-                     <h4>Leasing Professional</h4>
+                     <h4>Greystar</h4>
+                     <h6>Leasing Professional</h6>
                   </div>
                   <div class="col-md-6">
                      <h5 class="date">October 2018 - Present</h5>
@@ -107,11 +108,11 @@
                         <li>Circle of Excellence winner - March 2019</li>
                      </ul>
                   </div>
-               </div>
+               </div><br>
                <div class="row experience-title">
                   <div class="col-md-6">
-                     <h3>Sidecar Interactive</h3>
-                     <h4>Account Executive</h4>
+                     <h4>Sidecar Interactive</h4>
+                     <h6>Account Executive</h6>
                   </div>
                   <div class="col-md-6">
                      <h5 class="date">September 2017 - September 2018</h5>
@@ -124,11 +125,11 @@
                         <li>Brought on first client in first month, demonstrating ability to learn new market and product quickly</li>
                      </ul>
                   </div>
-               </div>
+               </div><br>
                <div class="row experience-title">
                   <div class="col-md-6">
-                     <h3>Evolution Ventures</h3>
-                     <h4>Sales Development & Operations</h4>
+                     <h4>Evolution Ventures</h4>
+                     <h6>Sales Development & Operations</h6>
                   </div>
                   <div class="col-md-6">
                      <h5 class="date">January 2016 - August 2017</h5>
@@ -141,11 +142,11 @@
                         <li>Increased annual revenue 30% YOY</li>
                      </ul>
                   </div>
-               </div>
+               </div><br>
                <div class="row experience-title">
                   <div class="col-md-6">
-                     <h3>Kaseya</h3>
-                     <h4>Account Manager & Sales Development</h4>
+                     <h4>Kaseya</h4>
+                     <h6>Account Manager & Sales Development</h6>
                   </div>
                   <div class="col-md-6">
                      <h5 class="date">April - December 2015</h5>
@@ -158,10 +159,10 @@
                         <li>Worked collaboratively with field sales to build channel sales, first region to do so in company</li>
                      </ul>
                   </div>
-               </div>
+               </div><br>
                <div class="row experience-title">
                   <div class="col-md-6">
-                     <h3>Career Break</h3>
+                     <h4>Career Break</h4>
                   </div>
                   <div class="col-md-6">
                      <h5 class="date">March 2014 - March 2015</h5>
@@ -173,11 +174,11 @@
                         <li>Traveled to 15 countries in 5 continents, became PADI Dive Instructor </li>
                      </ul>
                   </div>
-               </div>
+               </div><br>
                <div class="row experience-title">
                   <div class="col-md-6">
-                     <h3>Aerohive Networks</h3>
-                     <h4>Opportunity Development Representative</h4>
+                     <h4>Aerohive Networks</h4>
+                     <h6>Opportunity Development Representative</h6>
                   </div>
                   <div class="col-md-6">
                      <h5 class="date">January 2013 - February 2014</h5>
