--- a/app/views/application/winelog.html.erb
+++ b/app/views/application/winelog.html.erb
@@ -10,11 +10,15 @@
     <li>Seeded database from external source using Nokogiri</li><br>
     <li>OAuth login with Facebook/Google</li><br>
     <li>Enabled users to upload photo with Active Storage and Google Cloud storage</li><br>
+    <li>Create form submits dynamically and displays new wine or error messages through JavaScript and JSON without a page refresh</li>
+    <li>JavaScript index pages with asynchronous search feature</li>
+    <li>Multi and single select boxes with autocomplete created with jQuery</li>
     <li>Mobile responsive layout</li>
   </ul>
   <%= link_to "Live Demo", 'https://wine-log.herokuapp.com/',  target: "_blank", class: "button button-primary"%>
-  <%= link_to "Video Demo", 'https://drive.google.com/file/d/1x1R4_1moUpMBsxAHjTk8mhiKfHr5wt6F/view?usp=sharing',  target: "_blank", class: "button button-primary"%>
+  <%= link_to "Video Demo, Part 1", 'https://drive.google.com/file/d/1x1R4_1moUpMBsxAHjTk8mhiKfHr5wt6F/view?usp=sharing',  target: "_blank", class: "button button-primary"%>
+  <%= link_to "Video Demo, Part 2", 'https://drive.google.com/file/d/1p8Yb18fEBQQbXQELUrzUESsNnqC3bu4R/view?usp=sharing',  target: "_blank", class: "button button-primary"%>
   <%= link_to "GitHub", 'https://github.com/rachelkathleen/wine-log',  target: "_blank", class: "button button-primary"%>
-  </div>    
+  </div>
   </div>
 </section>
