--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -26,7 +26,7 @@
            </div>
            <div class="col-md-3 col-sm-3">
              <p>JavaScript</p>
-             <p>React/Redux/p>
+             <p>React/Redux</p>
 
            </div>
            <div class="col-md-3 col-sm-3">
