--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -149,7 +149,7 @@
                      <h6>Account Manager & Sales Development</h6>
                   </div>
                   <div class="col-md-6">
-                     <h5 class="date">April - December 2015</h5>
+                     <h5 class="date">April 2015 - December 2015</h5>
                   </div>
                </div>
                <div class="row experience-summary">
