update resume, add awards

--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -1,9 +1,247 @@
 <section id="resume" style="display: block">
-    <!-- <div class="main-content"> -->
+    <div class="main-content">
     <div class="jumbotron">
-      <iframe src="https://resume.creddle.io/embed/6f4pbpppyso"
-  width="854" height="1104" seamless></iframe>
+    <div class="row">
+      <div >
+        <div class="title text-center">
+            <!-- <h1>Rachel Hawa</h1>
+            <h3>Fullstack Developer</h3>
+            <hr class="my-4"> -->
+            <!-- summary section -->
+            <div>
+              <h2 class="text-center">Summary</h2>
+               <p class="lead">Full stack web developer with experience with Ruby/Ruby on Rails, JavaScript and React/Redux. Previous roles in software sales and account management have given me an understanding of the importance of writing clean code that translates into an excellent customer experience. I have transitioned to software development for the opportunity to work as a part of a collaborative team to  create software that adds value for customers from the database to the user interface.
+               </p>
+               <div class="row">
+           <div class="col-md-3 col-sm-3">
+             <p>Ruby/Ruby on Rails</p>
+             <p>HTML5/CSS3</p>
+           </div>
+           <div class="col-md-3 col-sm-3">
+             <p>JavaScript</p>
+             <p>React/Redux</p>
+           </div>
+           <div class="col-md-3 col-sm-3">
+             <p>Git</p>
+             <p>Bootstrap</p>
+           </div>
+           <div class="col-md-3 col-sm-3">
+             <p>Heroku</p>
+             <p>SQL/PostgreSQL</p>
+           </div>
+         </div>
+       </div>
+       <br>
+         <!-- education  section -->
+         <div>
+            <hr class="my-4"><br>
+            <h2 class="text-center">Education</h2>
+            <div class="row experience-title">
+               <div class="col-md-6">
+                  <h4>Flatiron School</h4>
+               </div>
+               <div class="col-md-6">
+                  <h5 class="date">November 2018 - Present</h5>
+               </div>
+            </div><br>
+            <div class="row experience-summary">
+               <div class="col-md-12">
+                  <p>Top rated full-stack web development program; nine months and 1000 hour curriculum covering Ruby, JavaScript, React/Redux, SQL, Git, and HTML/CSS</p>
+               </div>
+            </div><br>
+            <div class="row experience-title">
+               <div class="col-md-6">
+                  <h4>SUNY Purchase</h4>
+               </div>
+               <div class="col-md-6">
+                  <h5 class="date">2004-2006</h5>
+               </div>
+            </div>
+            <div class="row experience-summary">
+               <div class="col-md-12">
+                  <p>Coursework completed towards a Bachelor of Arts degree in Economics</p>
+               </div>
+            </div><br>
+            <div class="row experience-title">
+               <div class="col-md-6">
+                  <h4>Occidental College</h4>
+               </div>
+               <div class="col-md-6">
+                  <h5 class="date">2002-2004</h5>
+               </div>
+            </div>
+            <div class="row experience-summary">
+               <div class="col-md-12">
+                  <p>Coursework completed towards a Bachelor of Arts degree in Economics</p>
+               </div>
+            </div><br>
+            <!-- work experience section -->
+            <hr class="my-4"><br>
+            <div>
+               <h2 class="text-center">Work Experience</h2>
+               <div class="row experience-title">
+                 <div class="col-md-6">
+                     <h4>Greystar</h4>
+                     <h6>Leasing Professional</h6>
+                  </div>
+                  <div class="col-md-6">
+                     <h5 class="date">October 2018 - Present</h5>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Assist building rent growth alongside management  to make asset profitable and ready for sale</li>
+                        <li>Among top leasing agents in DFW region, in top tier of agents with third highest conversion ratio year-to-date</li>
+                        
+                     </ul>
+                  </div>
+               </div><br>
+               <div class="row experience-title">
+                  <div class="col-md-6">
+                     <h4>Sidecar Interactive</h4>
+                     <h6>Account Executive</h6>
+                  </div>
+                  <div class="col-md-6">
+                     <h5 class="date">September 2017 - September 2018</h5>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Used statistical analysis of Google Shopping performance for e-commerce retailers to sell technical product to C level executives</li>
+                        <li>Brought on first client in first month, demonstrating ability to learn new market and product quickly</li>
+                     </ul>
+                  </div>
+               </div><br>
+               <div class="row experience-title">
+                  <div class="col-md-6">
+                     <h4>Evolution Ventures</h4>
+                     <h6>Sales Development & Operations</h6>
+                  </div>
+                  <div class="col-md-6">
+                     <h5 class="date">January 2016 - August 2017</h5>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Designed and implemented custom CRM using Hubspot, including migration of legacy data</li>
+                        <li>Increased annual revenue 30% YOY</li>
+                     </ul>
+                  </div>
+               </div><br>
+               <div class="row experience-title">
+                  <div class="col-md-6">
+                     <h4>Kaseya</h4>
+                     <h6>Account Manager & Sales Development</h6>
+                  </div>
+                  <div class="col-md-6">
+                     <h5 class="date">April 2015 - December 2015</h5>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Increased retention in tier 3, 4 and 5 accounts in APAC region by over 25%</li>
+                        <li>Worked collaboratively with field sales to build channel sales, first region to do so in company</li>
+                     </ul>
+                  </div>
+               </div><br>
+               <div class="row experience-title">
+                  <div class="col-md-6">
+                     <h4>Career Break</h4>
+                  </div>
+                  <div class="col-md-6">
+                     <h5 class="date">March 2014 - March 2015</h5>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Traveled to 15 countries in 5 continents, became PADI Dive Instructor </li>
+                     </ul>
+                  </div>
+               </div><br>
+               <div class="row experience-title">
+                  <div class="col-md-6">
+                     <h4>Aerohive Networks</h4>
+                     <h6>Opportunity Development Representative</h6>
+                  </div>
+                  <div class="col-md-6">
+                     <h5 class="date">January 2013 - February 2014</h5>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Top ODR across entire team, both in US and international, 130% to quota overall </li>
+                        <li>Built pipeline that lead to over 3 million in closed deals</li>
+                        <li>Created own direct mail campaign for target accounts in the Northeast, lead to 3 new accounts on a list of 20 strategic accounts</li>
+                        
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div>
+            <hr class="my-4"><br>
+            <h2 class="text-center">Awards</h2>
+            <div class="row experience-title">
+               <div class="col-md-6">
+                  <h4>Greystar</h4>
+               </div>
+               <div class="col-md-6">
+                  <h5 class="date">March 2019</h5>
+               </div>
+            </div><br>
+            <div class="row experience-summary">
+               <div class="col-md-12">
+                  <p>Circle of Excellence</p>
+               </div>
+            </div><br>
+            <div class="row experience-title">
+               <div class="col-md-6">
+                  <h4>Greystar</h4>
+               </div>
+               <div class="col-md-6">
+                  <h5 class="date">August 2019</h5>
+               </div>
+            </div>
+            <div class="row experience-summary">
+               <div class="col-md-12">
+                  <p>President's Club</p>
+               </div>
+            </div><br>
+            <div class="row experience-title">
+               <div class="col-md-6">
+                  <h4>Aerohive Networks</h4>
+               </div>
+               <div class="col-md-6">
+                  <h5 class="date">January 2014</h5>
+               </div>
+            </div>
+            <div class="row experience-summary">
+               <div class="col-md-12">
+                  <p>President's Club</p>
+               </div>
+            </div><br>
+            <div class="row experience-title">
+               <div class="col-md-6">
+                  <h4>Aerohive Networks</h4>
+               </div>
+               <div class="col-md-6">
+                  <h5 class="date">January 2014</h5>
+               </div>
+            </div>
+            <div class="row experience-summary">
+               <div class="col-md-12">
+                  <p>Top Sales Team</p>
+               </div>
+            </div><br>
    </div>
 
- <!-- </div> -->
+   </div>
+ </div>
 </section>
