--- a/app/views/application/projects.html.erb
+++ b/app/views/application/projects.html.erb
@@ -1,6 +1,20 @@
 
 <section id="projects" style="display: block">
   <div class="main-content">
+      <div class="jumbotron">
+    <h1 class="display-4">PET ROULETTE!</h1>
+    <p class="lead">Single Page Application with randomized pet photo, built with React/Redux and a Rails API</p>
+    <hr class="my-4">
+    <ul>
+      <li>Consumes Petfinder API and randomly displays a pet, user has option to shuffle, or sent pet to a friend</li><br>
+      <li>Rails Action mailer used for sharing pets and contact form</li>
+      <li>Gallery page fetches data from rails server and displays pets shared that week and a scoreboard of shared pets</li><br>
+      <li>Single page application - React Router used for routing without page refresh</li><br>
+    </ul>
+    <%= link_to "Live Demo", 'pet-roulette.com',  target: "_blank", class: "button button-primary"%>
+    <%= link_to "GitHub - React Frontend", 'https://github.com/rachelkathleen/pet-roulette-client',  target: "_blank", class: "button button-primary"%>
+        <%= link_to "GitHub - Rails API", 'https://github.com/rachelkathleen/pet-roulette-api',  target: "_blank", class: "button button-primary"%>
+    </div>
     <div class="jumbotron">
     <h1 class="display-4">WINELOG</h1>
     <p class="lead">Digital wine tasting card built with Ruby on Rails, frontend designed with Bootstrap, HTML/CSS</p>
