--- a/app/views/application/projects.html.erb
+++ b/app/views/application/projects.html.erb
@@ -11,7 +11,7 @@
       <li>Gallery page fetches data from rails server and displays pets shared that week and a scoreboard of shared pets</li><br>
       <li>Single page application - React Router used for routing without page refresh</li><br>
     </ul>
-    <%= link_to "Live Demo", 'pet-roulette.com',  target: "_blank", class: "button button-primary"%>
+    <%= link_to "Live Demo", 'https://pet-roulette.com',  target: "_blank", class: "button button-primary"%>
     <%= link_to "GitHub - React Frontend", 'https://github.com/rachelkathleen/pet-roulette-client',  target: "_blank", class: "button button-primary"%>
         <%= link_to "GitHub - Rails API", 'https://github.com/rachelkathleen/pet-roulette-api',  target: "_blank", class: "button button-primary"%>
     </div>
