changed contact info

--- a/app/views/application/contact.html.erb
+++ b/app/views/application/contact.html.erb
@@ -2,7 +2,7 @@
   <div class="main-content">
     <div class="jumbotron">
       <h1 class="display-4">CONTACT</h1>
-      <p class="lead">Currently in Dallas TX, looking for opportunites in Austin, Denver, Portland or Seattle areas</p>
+      <p class="lead">Currently in Dallas TX.</p>
       <hr class="my-4">
         <p><i class="fa fa-envelope"></i> <a href="mailto:rachel.hawa@gmail.com">rachel.hawa@gmail.com</a></p>
         <p><i class="fab fa-medium"></i> <a href="https://medium.com/@rachel.hawa">Medium</a></p>
