--- a/app/views/application/_hero.html.erb
+++ b/app/views/application/_hero.html.erb
@@ -3,21 +3,14 @@
     <div class="headlines">
       <h1>Rachel Hawa</h1>
       <h4>Software Engineer</h4>
-      <h6>Ruby/Ruby on Rails, HTML5/CSS3, Javascript, React.js</h6>
+      <h6>Ruby/Ruby on Rails, HTML5/CSS3, Javascript, React/Redux</h6>
     </div>
     <div class="navbox" id="js-navigation">
       <ul class="buttons">
         <li><%= link_to "About", "./about.html", id: "about", class: "button" %></li>
         <li><%= link_to "Projects", "./projects.html", id: "projects", class: "button" %></li>
-        <!-- <li>        <div class="dropdown">
-                  <div onclick="myFunction()" class="button">Projects</div>
-                  <div id="myDropdown" class="dropdown-content">
-                    <% link_to "Winelog", "./winelog.html", id: "winelog"%>
-                    <% link_to "Parkfinder", "./parkfinder.html", id: "parkfinder"%>
-                    <% link_to "Divereport", "./divereport.html", id: "divereport"%>
-                  </div>
-                </div></li> -->
-        <li><%= link_to "Resume", "./resume.html", id: "resume", class: "button", target: "blank"%></li>
+        
+       <!-- <li><%= link_to "Resume", "./resume.html", id: "resume", class: "button", target: "blank"%></li>-->
         <li><%= link_to "Contact", "./contact.html", id: "contact", class: "button"%></li>
       <ul>
     </div>
