update pet roulette description

--- a/app/views/application/projects.html.erb
+++ b/app/views/application/projects.html.erb
@@ -7,6 +7,8 @@
     <hr class="my-4">
     <ul>
       <li>Consumes Petfinder API and randomly displays a pet, user has option to shuffle, or sent pet to a friend</li><br>
+      <li>State managed with Redux</li><br>
+      <li>Asynchronous API calls made with Thunk middleware</li><br>
       <li>Rails Action mailer used for sharing pets and contact form</li>
       <li>Gallery page fetches data from rails server and displays pets shared that week and a scoreboard of shared pets</li><br>
       <li>Single page application - React Router used for routing without page refresh</li><br>
