--- a/app/views/application/_hero.html.erb
+++ b/app/views/application/_hero.html.erb
@@ -2,15 +2,14 @@
   <div class="hero-text">
     <div class="headlines">
       <h1>Rachel Hawa</h1>
-      <h4>Software Engineer</h4>
-      <h6>Ruby/Ruby on Rails, HTML5/CSS3, Javascript, React/Redux</h6>
+      <h4>UI Developer/Software Engineer</h4>
+      <h6>Ruby/Ruby on Rails, Go, HTML5/CSS3, Javascript, React/Redux</h6>
     </div>
     <div class="navbox" id="js-navigation">
       <ul class="buttons">
         <li><%= link_to "About", "./about.html", id: "about", class: "button" %></li>
         <li><%= link_to "Projects", "./projects.html", id: "projects", class: "button" %></li>
-        
-       <!-- <li><%= link_to "Resume", "./resume.html", id: "resume", class: "button", target: "blank"%></li>-->
+        <li><%= link_to "Resume", "./resume.html", id: "resume", class: "button", target: "blank"%></li>
         <li><%= link_to "Contact", "./contact.html", id: "contact", class: "button"%></li>
       <ul>
     </div>
