--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -11,19 +11,19 @@
                <div class="row">
            <div class="col-md-3 col-sm-3">
              <p>Ruby/Ruby on Rails</p>
-             <p>HTML5/CSS3</p>
+             <p>Bootstrap/HTML5/CSS3</p>
            </div>
            <div class="col-md-3 col-sm-3">
              <p>JavaScript</p>
              <p>React/Redux</p>
            </div>
            <div class="col-md-3 col-sm-3">
-             <p>Git</p>
-             <p>Bootstrap</p>
+             <p>Heroku/Netlify</p>
+             <p>SQL/PostgreSQL</p>
            </div>
            <div class="col-md-3 col-sm-3">
-             <p>Heroku</p>
-             <p>SQL/PostgreSQL</p>
+             <p>Git</p>
+             <p>Go</p>
            </div>
          </div>
        </div>
@@ -37,7 +37,7 @@
                   <h4>Flatiron School</h4>
                </div>
                <div class="col-md-6">
-                  <h5 class="date">November 2018 - Present</h5>
+                  <h5 class="date">November 2018 - October 2019</h5>
                </div>
             </div><br>
             <div class="row experience-summary">
@@ -77,11 +77,28 @@
                <h2 class="text-center">Work Experience</h2>
                <div class="row experience-title">
                  <div class="col-md-6">
+                     <h4>Southwest Airlines</h4>
+                     <h6>Associate Software Engineer</h6>
+                  </div>
+                  <div class="col-md-6">
+                     <h5 class="date">December 2019 - Present</h5>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Work using agile development methodology adding new features to Southwest.com</li>
+                        <li>Convert legacy code from ES5 to ESNext, React 15 to 16 and converting unit tests to Jest/Enzyme</li>
+                     </ul>
+                  </div>
+               </div><br>
+               <div class="row experience-title">
+                 <div class="col-md-6">
                      <h4>Greystar</h4>
                      <h6>Leasing Professional</h6>
                   </div>
                   <div class="col-md-6">
-                     <h5 class="date">October 2018 - Present</h5>
+                     <h5 class="date">October 2018 - December 2019</h5>
                   </div>
                </div>
                <div class="row experience-summary">
